--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>guava</artifactId>
 			<version>19.0-rc2</version>
 		</dependency>
+		<dependency>
+			<groupId>jonelo.jacksum</groupId>
+			<artifactId>jacksum</artifactId>
+			<version>1.7</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
