--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>net.openhft</groupId>
 			<artifactId>zero-allocation-hashing</artifactId>
-			<version>0.5</version>
+			<version>0.10.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.intellij</groupId>
@@ -37,15 +37,14 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<!-- built from commit b69d5676f74344bf04068594644fa5ecc2bb6a67 -->
-			<groupId>net.jpountz.lz4</groupId>
-			<artifactId>lz4</artifactId>
-			<version>1.3.20150924</version>
+			<groupId>org.lz4</groupId>
+			<artifactId>lz4-java</artifactId>
+			<version>1.7.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0-rc2</version>
+			<version>28.2-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>jonelo.jacksum</groupId>
@@ -55,13 +54,13 @@
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-debug-jdk15on</artifactId>
-			<version>1.52</version>
+			<version>1.64</version>
 		</dependency>
 	</dependencies>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jmh.version>1.11.2</jmh.version>
+		<jmh.version>1.22</jmh.version>
 		<javac.target>1.8</javac.target>
 		<uberjar.name>benchmarks</uberjar.name>
 	</properties>
